2.AKS/GitOps/gitea/gitea-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: gitea
    meta.helm.sh/release-namespace: cicd
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1    
  labels:
    app: gitea
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: gitea
    app.kubernetes.io/version: 1.15.10
    helm.sh/chart: gitea-5.0.1
    version: 1.15.10
  name: gitea-ing
  namespace: cicd
spec:
  rules:
  - host: gitea.nodespringboot.org
    http:
      paths:
      - path: /gitea(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: gitea-http 
            port:
              number: 3000               # 포트를 맞춤 (이름 혹은 숫자)
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: gitea-http 
            port:
              number: 3000
